# ocean-uptime

./: .env.example  .gitignore  LICENCE  README.md  pyproject.toml  surf.py
good_surf/: analysis.py  chart.py  config.py  exceptions.py  main.py  models.py  notifier.py  stormglass.py
tests/: test_surf.py
